--- a/info-mapper/src/styles.css
+++ b/info-mapper/src/styles.css
@@ -15,6 +15,7 @@ created and shown as the background for the Dialog popup. Here, the padding, col
   padding-left: 0%;
   padding-right: 0%;
   padding-bottom: 0%;
+  height: 100%;
 }
 
 /* .cdk-overlay-pane {
