Added the ability to show markdown images by using the path relative to the markdown file it's being dislayed in

--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.component.html
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.component.html
@@ -49,7 +49,7 @@
   <!-- Show the markdown converted to HTML using showdown of a geoLayerViewGroup or geoLayerView -->
   <div *ngIf="showDoc && docMarkdown" class="docBox">
     <div id="docDiv">
-      <showdown [value]="doc" [options]="options" class="docBoxText" style="height: 100%;"></showdown>
+      <showdown [value]="showdownHTML" [options]="options" class="docBoxText" style="height: 100%;"></showdown>
     </div>
   </div>
   <!-- Show the contents of a regular HTML file -->
