Issue #229: Smaller text used, and doc button placement changed in map name header

--- a/info-mapper/src/app/map-components/map.component.css
+++ b/info-mapper/src/app/map-components/map.component.css
@@ -143,10 +143,12 @@ green that has been represented throughout the rest of the Info Mapper */
 
 .geoMap-title {
   float: left;
+  font-size: 90%;
 }
 
 .geoMap-doc-button {
-  float: right;
+  float: left;
+  margin-left: 5%;
 }
 
 /*  */
