--- a/infomapper/src/app/map-components/map.component.css
+++ b/infomapper/src/app/map-components/map.component.css
@@ -476,7 +476,8 @@ green that has been represented throughout the rest of the Info Mapper */
 }
 
 #zoomInfo {
-  background: white;
+  background-color: rgba(255, 255, 255, 0.7);
+  box-shadow: 0 0 5px #bbb;
   color: #333;
   margin-top: 4px;
   padding-left: 5px;
