--- a/infomapper/src/app/nav-bar/tab/tab.component.css
+++ b/infomapper/src/app/nav-bar/tab/tab.component.css
@@ -34,6 +34,13 @@ a.dropdown-item-not-enabled {
   top: 95%;
 }
 
+/* Styling the Content Page menu icon */
+.fa-file-text {
+  margin-left: 2%;
+  margin-right: 4%;
+  /* filter: opacity(20%); */
+}
+
 .navbar
 a.dropdown-item {
     padding-left:5px;
@@ -53,4 +60,9 @@ img {
 
 .nav-item-not-enabled {
   color: #b4b3b3;
+}
+
+/* ID's */
+#brightness {
+  filter: opacity(20%);
 }
