--- a/infomapper/src/app/map-components/background-layer-control/background-layer.component.css
+++ b/infomapper/src/app/map-components/background-layer-control/background-layer.component.css
@@ -8,3 +8,11 @@ td {
   padding:5px;
   border-style: none;
 }
+
+/* CLASSES */
+.dropdown-divider {
+  padding-top: 0%;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+  margin-top: 0%;
+}
