--- a/infomapper/src/app/nav-bar/tab/tab.component.css
+++ b/infomapper/src/app/nav-bar/tab/tab.component.css
@@ -36,8 +36,8 @@ a.dropdown-item-not-enabled {
 
 /* Styling the Content Page menu icon */
 .fa-file-text {
-  margin-left: 2%;
-  margin-right: 4%;
+  margin-left: 1%;
+  margin-right: 2%;
   /* filter: opacity(20%); */
 }
 
@@ -47,15 +47,14 @@ a.dropdown-item {
 }
 
 .navbar
-a.spacer
-{
+a.spacer {
   width: 80px;
 }
 
 .navbar
 a.dropdown-item
 img {
-    margin-right:5px;
+    /* margin-right:5px; */
 }
 
 .nav-item-not-enabled {
@@ -63,6 +62,7 @@ img {
 }
 
 /* ID's */
+/* Instead of being with the other brightness class, this is for a font awesome class when not enabled */
 #brightness {
   filter: opacity(20%);
 }
