Issue #258: Tooltip has been updated, and more code was refactored

--- a/infomapper/src/app/map-components/map.component.html
+++ b/infomapper/src/app/map-components/map.component.html
@@ -414,7 +414,7 @@
                       <button class="btn btn-link"
                               data-target="#collapse-background"
                               data-toggle="collapse"
-                              matTooltip="Click to expand/collapse basemap layer tools"
+                              matTooltip="Click to expand/collapse background layer controls"
                               matTooltipShowDelay="750"
                               matTooltipPosition="above"
                               aria-expanded="true"
