Issue #261: Content pages are now created using ngx-showdown

--- a/infomapper/src/app/content-page/content-page.component.css
+++ b/infomapper/src/app/content-page/content-page.component.css
@@ -1,13 +1,7 @@
 /* CLASSES */
 
-
+/* Necessary class that controls the height and margin when displaying the Showdown HTML */
 .container {
   margin-top:50px !important;
   height:100vh;
-}
-
-/* ID'S */
-#markdown-div {
-  height: 90%;
-  overflow: auto;
 }
